Basic version of app that reintroduced graphs

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -6,9 +6,19 @@
     <link href="https://cdn.pydata.org/bokeh/release/bokeh-2.3.1.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1>Current Coronavirus Status</h1>
-    {{ the_div|safe }}
-    <script src="https://cdn.bokeh.org/bokeh/release/bokeh-2.3.1.min.js" crossorigin="anonymous"></script>
-    {{ the_script|safe }}
+    <h1>Coronavirus Dashboard</h1>
+    <h2>Current Status</h2>
+    {% for key in the_div1.keys() %}
+        <div style="float: left">{{ the_div1[key]|safe }}</div>
+    {% endfor %}
+    {{ the_script1|safe }}
+    <div style="clear: both"></div>
+    <h2>Cases, Deaths & Vaccinations</h2>
+    {% for key in the_div2.keys() %}
+        <div style="float: left">{{ the_div2[key]|safe }}</div>
+    {% endfor %}
+    {{ the_script2|safe }}
+    <div style="clear: both"></div>
 </body>
+<script src="https://cdn.bokeh.org/bokeh/release/bokeh-2.3.1.min.js" crossorigin="anonymous"></script>
 </html>
