Problem of zeros instead of NaNs at end of series fixed; data source added to template

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -18,7 +18,9 @@
         <div style="float: left">{{ the_div2[key]|safe }}</div>
     {% endfor %}
     {{ the_script2|safe }}
-    <div style="clear: both"></div>
+    <div style="clear: both">
+        <p>Data Source:  <a href="https://ourworldindata.org/">https://ourworldindata.org/</a></p>
+    </div>
 </body>
 <script src="https://cdn.bokeh.org/bokeh/release/bokeh-2.3.1.min.js" crossorigin="anonymous"></script>
 </html>
