--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,29 +1,44 @@
-{% extends 'bootstrap/base.html' %}
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Covid Dashboard</title>
 
-{% block content %}
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Covid Dashboard</title>
-        <link href="https://cdn.pydata.org/bokeh/release/bokeh-2.3.1.min.css" rel="stylesheet" type="text/css">
-    </head>
-    <body>
-        <h1 align="center">Coronavirus Dashboard</h1>
-        <h2>Current Status</h2>
-        {% for key in the_div1.keys() %}
-            <div style="float: left">{{ the_div1[key]|safe }}</div>
-        {% endfor %}
-        {{ the_script1|safe }}
-        <div style="clear: both"></div>
-        <h2>Cases, Deaths & Vaccinations</h2>
-        {% for key in the_div2.keys() %}
-            <div style="float: left">{{ the_div2[key]|safe }}</div>
-        {% endfor %}
-        {{ the_script2|safe }}
-        <div style="clear: both">
-            <p>Data Source:  <a href="https://ourworldindata.org/">https://ourworldindata.org/</a></p>
+    <!-- Bokeh CSS -->
+    <link href="https://cdn.pydata.org/bokeh/release/bokeh-2.3.1.min.css" rel="stylesheet" type="text/css">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+
+    <style type="text/css">
+        div {
+            border-color: grey;
+            }
+    </style>
+</head>
+<body>
+    <h1 style="padding-top:24px; text-align:center;">Coronavirus Dashboard</h1>
+    <div class="container">
+        <h2 style="padding-top:24px; padding-bottom:6px;">Current Status</h2>
+        <div class="row gy-3">
+            {% for key in the_div1.keys() %}
+                <div class="col-md-6 col-sm-12">{{ the_div1[key]|safe }}</div>
+            {% endfor %}
+            {{ the_script1|safe }}
         </div>
-    </body>
-    <script src="https://cdn.bokeh.org/bokeh/release/bokeh-2.3.1.min.js" crossorigin="anonymous"></script>
-    </html>
-{% endblock %}
+    </div>
+    <div class="container">
+        <h2 style="padding-top:24px; padding-bottom:6px;">Cases, Deaths & Vaccinations</h2>
+        <div class="row gy-3">
+            {% for key in the_div2.keys() %}
+                <div class="col-md-6 col-sm-12">{{ the_div2[key]|safe }}</div>
+            {% endfor %}
+            {{ the_script2|safe }}
+        </div>
+    </div>
+    <div class="container">
+        <p>Data Source:  <a href="https://ourworldindata.org/">https://ourworldindata.org/</a></p>
+    </div>
+</body>
+<script src="https://cdn.bokeh.org/bokeh/release/bokeh-2.3.1.min.js" crossorigin="anonymous"></script>
+</html>
