--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -22,7 +22,7 @@
         <h2 style="padding-top:24px; padding-bottom:6px;">Current Status</h2>
         <div class="row gy-3">
             {% for key in the_div1.keys() %}
-                <div class="col-md-6 col-sm-12">{{ the_div1[key]|safe }}</div>
+                <div class="col-12 col-md-6">{{ the_div1[key]|safe }}</div>
             {% endfor %}
             {{ the_script1|safe }}
         </div>
@@ -31,7 +31,7 @@
         <h2 style="padding-top:24px; padding-bottom:6px;">Cases, Deaths & Vaccinations</h2>
         <div class="row gy-3">
             {% for key in the_div2.keys() %}
-                <div class="col-md-6 col-sm-12">{{ the_div2[key]|safe }}</div>
+                <div class="col-12 col-md-6">{{ the_div2[key]|safe }}</div>
             {% endfor %}
             {{ the_script2|safe }}
         </div>
