--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -36,7 +36,7 @@
             {{ the_script2|safe }}
         </div>
     </div>
-    <div class="container">
+    <div class="container" style="padding-top:24px;">
         <p>Data Source:  <a href="https://ourworldindata.org/">https://ourworldindata.org/</a></p>
     </div>
 </body>
